force-app/main/default/objects/Soldcase_Symphony__c/Soldcase_Symphony__c.object-meta.xml
<CustomObject>
    <label>Soldcase</label>
    <nameField>
        <displayFormat>SC-{00000000}</displayFormat>
        <label>Soldcase Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Soldcases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>