force-app/main/default/objects/Soldcase_Symphony__c/fields/Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Email__c</fullName>
    <description>This will be used to send emails to the broker on soldcase updates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Email</label>
    <type>Email</type>
</CustomField>