force-app/main/default/objects/Soldcase_Symphony__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Soldcases</relationshipLabel>
    <relationshipName>Soldcases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>