force-app/main/default/objects/Soldcase_Symphony__c/fields/Signed_Broker_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Broker_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Broker Date</label>
    <type>Date</type>
</CustomField>