force-app/main/default/objects/Soldcase_Symphony__c/fields/Signed_Broker_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Signed_Broker_FirstName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Broker FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>