force-app/main/default/objects/Soldcase_Symphony__c/fields/Signed_Employer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Signed_Employer_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Employer First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>