force-app/main/default/objects/Soldcase_Symphony__c/fields/Sold_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Sold_Case_Status__c</fullName>
    <label>Sold Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Sent to Employer</fullName>
            </value>
            <value>
                <fullName>Signed by Employer</fullName>
            </value>
            <value>
                <fullName>Signed by Broker</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>